GUI-405 fixed firefox data store overflow

--- a/stylesheets/less/datastore.less
+++ b/stylesheets/less/datastore.less
@@ -889,7 +889,9 @@ input {
     overflow: hidden;
     float: left;
     width: 100%;
-    height: ~"calc(100% - 162px)";
+    // height: ~"calc(100% - 162px)";
+    height: ~"calc(100% - 58px)";
+    position: absolute;
 }
 
 .datasetTbodyWrap {
@@ -939,6 +941,9 @@ table.datasetTable {
     }
     th {
         width: 130px;
+        &:first-child {
+            border-left: 5px solid @color-background-tableBorders;
+        }
     }
     .selectedCell {
         .editableHead {
